--- a/css/enjaz.css
+++ b/css/enjaz.css
@@ -19,7 +19,7 @@ body {}
 /* end globale rolez */
 
 /* start header */
-header {padding: 20px;background-color: #0095ffa3;}
+header {padding-left: 15px;padding-right: 15px;background-color: #0095ffa3;}
 header .container {display: flex;justify-content: space-between;align-items: center;}
 header .container .logo {color: white;margin: 0;}
 
@@ -27,11 +27,26 @@ header .container ul {display: flex;list-style: none;direction: rtl;margin: 0;}
 header .container ul li {padding-left: 20px;border-left: 1px solid black;padding-right: 20px;}
 header .container ul li a {color: white;text-decoration: none;font-size: 15px;font-weight: 900;transition: 0.3s;}
 header .container ul li a:hover {color: rgb(24, 247, 247)}
+
+@media (max-width:786px) {
+    header .container .links {position: relative;}
+    header .container .links:hover ul {display: block;}
+    header .container .links:hover .icon span:nth-child(2) {width: 100%}
+    header .container .links .icon {width: 30px;display: flex;flex-wrap: wrap;justify-content: flex-end;}
+    header .container .links .icon span {background-color: #333;margin-bottom: 5px;height: 2px;}
+    header .container .links .icon span:first-child {width: 100%;}
+    header .container .links .icon span:nth-child(2) {width: 60%;transition: 0.3s;}
+    header .container .links .icon span:last-child {width: 100%;}
+    header .container .links ul {z-index: 1;;display: none;list-style: none;margin: 0;padding: 0;position: absolute;right: 0;background-color: #f6f6f6;min-width: 200px;top: calc(100% + 15px);}
+    header .container .links ul::before {content: "";border-width: 10px;border-style: solid;border-color: transparent transparent #f6f6f6 transparent;position: absolute;right: 5px;top: -20px;}
+    header .container .links ul li:not(:last-child) {border-bottom: 1px solid #ddd;}
+    header .container .links ul li a {display: block;padding: 15px;text-decoration: none;color: #333;transition: 0.3s;}
+    header .container .links ul li a:hover {padding-left: 25px;color:var(--main-color);}
+}
 /* end header */
 /* start home */
 .landing {background-image: url(../images/landing.jpeg);background-size: cover;height: calc(100vh - 120px);position: relative;}
-.landing::before {content: "";position: absolute;background-color: ;}
-.landing .container {}
+.landing::before {content: "";position: absolute;}
 .landing .container .text {text-align: center;direction: rtl;position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);}
 .landing .container .text h2 {margin: 0;color:white;font-size: 40px;}
 .landing .container .text p {font-size: 22px;text-align: justify;color:white}
