--- a/css/enjaz.css
+++ b/css/enjaz.css
@@ -41,7 +41,7 @@ header .container ul li a:hover {color: rgb(24, 247, 247)}
     header .container .links ul::before {content: "";border-width: 10px;border-style: solid;border-color: transparent transparent #f6f6f6 transparent;position: absolute;right: 5px;top: -20px;}
     header .container .links ul li:not(:last-child) {border-bottom: 1px solid #ddd;}
     header .container .links ul li a {display: block;padding: 15px;text-decoration: none;color: #333;transition: 0.3s;}
-    header .container .links ul li a:hover {padding-left: 25px;color:var(--main-color);}
+    header .container .links ul li a:hover {padding-left: 25px;color:#ffb400}
 }
 /* end header */
 /* start home */
@@ -52,6 +52,11 @@ header .container ul li a:hover {color: rgb(24, 247, 247)}
 .landing .container .text p {font-size: 22px;text-align: justify;color:white}
 .landing .container .text input {transition: 0.3s;background-color:#ffb400;color:white;border: none;width: 140px;height: 35px;border-radius: 10px;text-align: center;align-items: center;font-size: 20px;}
 .landing .container .text input:hover {background-color:rgb(24, 247, 247);}
+@media (max-width:786px) {
+    .landing .container .text {height: 500px;width: 300px;padding: 20px;background-color: #ffb400;left: 50%;top: 50%;transform: translateX(-50% , -50%);background-color: rgba(0, 174, 255, 0.342);border-radius:10px;}
+    .landing .container .text h2 {font-size: 30px;padding-top: 25px;}
+    .landing .container .text p {font-size: 25px;text-align: inherit;}
+}
 /* end home */
 /* start home */
 /* end home */
