--- a/css/enjaz.css
+++ b/css/enjaz.css
@@ -49,13 +49,13 @@ header .container ul li a:hover {color: rgb(24, 247, 247)}
 .landing .overly {position: absolute;left: 0;top:0;width: 100%;height: 100%;background-color:rgb(0 0 0 / 60% )}
 .landing .container .text {text-align: center;direction: rtl;position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);}
 .landing .container .text h2 {margin: 0;color:white;font-size: 40px;}
-.landing .container .text p {font-size: 22px;text-align: justify;color:white}
-.landing .container .text input {transition: 0.3s;background-color:#ffb400;color:white;border: none;width: 140px;height: 35px;border-radius: 10px;text-align: center;align-items: center;font-size: 20px;}
+.landing .container .text p {font-size: 22px;text-align: justify;color:white;line-height: 1.6;}
+.landing .container .text input {transition: 0.3s;background-color:#ffb400;color:white;border: none;width: 140px;height: 35px;border-radius: 10px;text-align: center;align-items: center;font-size: 20px;margin-top: 60px}
 .landing .container .text input:hover {background-color:rgb(24, 247, 247);}
 @media (max-width:786px) {
     .landing .container .text {height: 500px;width: 300px;padding: 20px;background-color: #ffb400;left: 50%;top: 50%;transform: translateX(-50% , -50%);background-color: rgba(0, 174, 255, 0.342);border-radius:10px;}
     .landing .container .text h2 {font-size: 30px;padding-top: 25px;}
-    .landing .container .text p {font-size: 25px;text-align: inherit;}
+    .landing .container .text p {font-size: 20px;text-align: inherit;line-height: 1.4;}
 }
 /* end home */
 /* start home */
