--- a/css/enjaz.css
+++ b/css/enjaz.css
@@ -68,7 +68,7 @@ header .container ul li a:hover {color:#ffb400}
 .features::before {}
 .features .container {}
 .features .container .featurs {direction: rtl;display: grid;grid-template-columns: repeat(auto-fill,minmax( 200px, 1fr ));grid-gap: 20px;text-align: center;}
-.features .container .featurs .featur img {max-width: 140px;background-color: white;border-radius: 50%;padding: 5px;border: 1px solid black;}
+.features .container .featurs .featur img {max-width: 140px;background-color: white;border-radius: 50%;padding: 5px;border: 1px solid rgb(255, 2, 2);}
 .features .container .featurs .featur h3 {}
 .features .container .featurs .featur p {font-size: 15px;}
 /* end home */
