--- a/css/enjaz.css
+++ b/css/enjaz.css
@@ -69,13 +69,17 @@ header .container ul li a:hover {color:#ffb400}
 
 /* start home */
 .features {background-color: #739ee3;background-size: cover;position: relative;}
-.features::after {content: "";position: absolute;left: 0px;top: 0;background: url(../images/choc.png)repeat-y;width: 1440px;height: 1011px;}
-.features::before {content: "";position: absolute;left: 0px;top: 0;background: url(../images/choc2.png)no-repeat;width: 408px;height: 583px;}
-.features .container {}
+.features::after {content: "";position: absolute;left: 0px;top: 0;background: url(../images/choc.png)repeat-y;min-width: 1440px;height: 1011px;text-align: center;}
+.features::before {content: "";position: absolute;left: 0px;top: 0;background: url(../images/choc2.png)no-repeat;min-width: 408px;height: 583px;}
+.features .container {z-index: 1;}
 .features .container .featurs {direction: rtl;display: grid;grid-template-columns: repeat(auto-fill,minmax( 200px, 1fr ));grid-gap: 20px;text-align: center;}
 .features .container .featurs .featur img {max-width: 140px;background-color: white;border-radius: 50%;padding: 5px;border: 1px solid rgb(255, 2, 2);}
 .features .container .featurs .featur h3 {color: white;}
 .features .container .featurs .featur p {font-size: 15px;color: white;}
+@media (max-width:1200px) {
+    .features::before {display: none;}
+    .features::after {display: none;}
+}
 /* end home */
 /* start roya */
 .roya {position: relative;background-image: url(../images/roya.jpg);background-size: cover;height:100vh;margin: 0;background-attachment: fixed;}
