--- a/css/enjaz.css
+++ b/css/enjaz.css
@@ -7,6 +7,7 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+html { scroll-behavior:smooth;}
 @font-face {
     src:url(../fonts/alfont_com_Manifa-V2.ttf);
     font-family: manifa;
