--- a/css/enjaz.css
+++ b/css/enjaz.css
@@ -89,3 +89,17 @@ header .container ul li a:hover {color:#ffb400}
 .roya .container .text {padding: 20px;border-radius: 50%;border: 4px solid white;text-align: center;font-weight: bold;}
 .roya .container .text h2 {color: white;font-size: 35px;}
 .roya .container .text p  {color: white;}
+/* start foteer */
+.foteer {background-color: #343434;direction: rtl;color: white;}
+.foteer .container {display: grid;grid-template-columns: repeat(auto-fill,minmax(300px ,1fr));grid-gap:20px;}
+.foteer .container .royaa {}
+.foteer .container .royaa h4 {font-size: 20px;font-weight: bold;}
+.foteer .container .royaa p {text-align: justify;font-size: 15px;}
+.foteer .container .royaa .sochial {}
+.foteer .container .royaa .sochial img {max-width:25px ;border-radius: 50%;border: 1px solid white;padding: 5px;background-color: white;margin-left: 5px;}
+.foteer .container .royaa .menu {}
+.foteer .container .royaa .menu ul {}
+.foteer .container .royaa .menu ul li {}
+.foteer .container .royaa .menu ul li a {}
+.foteer .container .royaa .map {}
+/* end foteer */
