--- a/css/enjaz.css
+++ b/css/enjaz.css
@@ -76,7 +76,7 @@ header .container ul li a:hover {color:#ffb400}
 .features::before {content: "";position: absolute;left: 0px;top: 0;background: url(../images/choc2.png)no-repeat;min-width: 408px;height: 583px;}
 .features .container {z-index: 1;}
 .features .container .featurs {direction: rtl;display: grid;grid-template-columns: repeat(auto-fill,minmax( 200px, 1fr ));grid-gap: 20px;text-align: center;}
-.features .container .featurs .featur img {max-width: 140px;background-color: white;border-radius: 50%;padding: 5px;border: 1px solid rgb(255, 2, 2);}
+.features .container .featurs .featur img {max-width: 140px;background-color: white;border-radius: 50%;padding: 5px;border: 1px solid #ffb400;}
 .features .container .featurs .featur h3 {color: white;}
 .features .container .featurs .featur p {font-size: 15px;color: white;}
 @media (max-width:1200px) {
