--- a/css/enjaz.css
+++ b/css/enjaz.css
@@ -86,7 +86,7 @@ header .container ul li a:hover {color:#ffb400}
 }
 /* end home */
 /* start roya */
-.roya {position: relative;background-image: url(../images/roya.jpg);background-size: cover;height:100vh;margin: 0;background-attachment: fixed;}
+.roya {position: relative;background-image: url(../images/roya.jpg);background-size: cover;height:100vh;margin: 0;}
 .roya .overly {position: absolute;left: 0;top:0;width: 100%;height: 100%;background-color:#ffb3006b}
 .roya .container {position: relative;}
 .roya .container .roy {display: grid;grid-template-columns: repeat(auto-fill,minmax(200px ,1fr));grid-gap:18px;margin-top: 10px;}
